--- a/src/components/App.css
+++ b/src/components/App.css
@@ -42,3 +42,27 @@ h3 {
   gap: 16px;
   margin-bottom: 30px;
 } 
+
+.message-container {
+  top: 0;
+  left: 0;
+  position: fixed;
+  background-color: transparent;
+  pointer-events: none;
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+
+.message {
+  height: 4vh;
+  padding: 8px;
+  background-color: lightblue;
+  width: fit-content;
+}
