--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -7,6 +7,8 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    background-color: white;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
 }
 
 .card * {
