--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,12 +1,14 @@
 nav {
-    height: 40px;
+    height: 60px;
     background-color: black;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 8px 12px;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4);
 }
 
 nav a {
     color: white;
-    font-size: larger;
+    font-size: xx-large;
 }
