--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -1,7 +1,7 @@
 .post, .comment-box, .comments-wrapper {
     background-color: white;
     max-width: 80%;
-    box-shadow: 2px 2px rgba(0, 0, 0, 0.8);
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
     display: flex;
     align-items: flex-start;
     flex-direction: column;
@@ -118,7 +118,7 @@
 .comment {
     background-color: lightgrey;
     border-radius: 2px;
-    box-shadow: 2px 2px solid grey;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
     width: 100%;
     margin-bottom: 6px;
     padding: 4px 8px;
@@ -138,6 +138,6 @@
 .comment .date {
     text-align: end;
     font-size: small;
-    color: rgb(0 0 0 0.6);
+    color: rgba(0, 0, 0, 0.7);
     font-style: italic;
 }
